--- a/config/dbs/postgresql.yaml
+++ b/config/dbs/postgresql.yaml
@@ -46,6 +46,10 @@ servers:
                       value: "[[.KieName]]-postgresql"
                     - name: RHPAM_SERVICE_PORT
                       value: "5432"
+                    - name: RHPAM_CONNECTION_CHECKER
+                      value: "org.jboss.jca.adapters.jdbc.extensions.postgres.PostgreSQLValidConnectionChecker"
+                    - name: RHPAM_EXCEPTION_SORTER
+                      value: "org.jboss.jca.adapters.jdbc.extensions.postgres.PostgreSQLExceptionSorter"
                     - name: TIMER_SERVICE_DATA_STORE_REFRESH_INTERVAL
                       value: "30000"
                     ## PostgreSQL driver settings END
