--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -445,6 +445,15 @@ spec:
                     keystoreSecret:
                       type: string
                       description: Keystore secret name
+                    protocol:
+                      type: string
+                      description: Smart Router protocol, if no value is provided, http is the default protocol.
+                      enum:
+                        - http
+                        - https
+                    useExternalRoute:
+                      type: boolean
+                      description: If enabled, Busineses Central will use the external smartrouter route to communicate with it. Note that, valid SSL certificates should be used.
                     env:
                       type: array
                       items:
