--- a/config/jms/activemq-jms-config.yaml
+++ b/config/jms/activemq-jms-config.yaml
@@ -13,6 +13,10 @@ servers:
               - name: "[[.KieName]]"
                 env:
                   # JMS config BEGIN
+                  - name: KIE_SERVER_EXECUTOR_JMS
+                    value: "[[.Jms.Executor]]"
+                  - name: KIE_SERVER_EXECUTOR_JMS_TRANSACTED
+                    value: "[[.Jms.ExecutorTransacted]]"
                   - name: KIE_SERVER_JMS_QUEUE_REQUEST
                     value: "[[.Jms.QueueRequest]]"
                   - name: KIE_SERVER_JMS_QUEUE_RESPONSE
