--- a/deploy/catalog_resources/redhat/1.2.0/businessautomation-operator.1.2.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/redhat/1.2.0/businessautomation-operator.1.2.0.clusterserviceversion.yaml
@@ -5,12 +5,12 @@ metadata:
   namespace: placeholder
   annotations:
     categories: "Integration & Delivery"
-    capabilities: "Basic Install"
+    capabilities: "Seamless Upgrades"
     certified: "true"
     description: Business Automation Operator for deployment and management of RHPAM/RHDM environments.
     repository: https://github.com/kiegroup/kie-cloud-operator    
     containerImage: registry.redhat.io/rhpam-7/rhpam75-operator:1.0
-    createdAt: 2019-06-03
+    createdAt: 2019-08-21
     support: Red Hat, Inc.
     tectonic-visibility: ocs
     alm-examples: >-
