[RHPAM-2282] Changes in users and roles made by Business central are not persisted
Signed-off-by: David Ward <dward@redhat.com>

--- a/config/7.5.0/common.yaml
+++ b/config/7.5.0/common.yaml
@@ -72,6 +72,10 @@ console:
                     containerPort: 8888
                     protocol: TCP
                 env:
+                  - name: APPLICATION_USERS_PROPERTIES
+                    value: "/opt/kie/data/configuration/application-users.properties"
+                  - name: APPLICATION_ROLES_PROPERTIES
+                    value: "/opt/kie/data/configuration/application-roles.properties"
                   - name: KIE_ADMIN_USER
                     value: "[[.AdminUser]]"
                   - name: KIE_ADMIN_PWD
