csv mods to allow seamless upgrades; use csv as owner for ui/cm objects
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/deploy/catalog_resources/community/1.1.1/kiecloud-operator.1.1.1.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/1.1.1/kiecloud-operator.1.1.1.clusterserviceversion.yaml
@@ -159,7 +159,10 @@ spec:
           spec:
             replicas: 1
             strategy:
-              type: Recreate
+              type: RollingUpdate
+              rollingUpdate:
+                maxSurge: 1
+                maxUnavailable: 1
             selector:
               matchLabels:
                 name: kie-cloud-operator
