csv mods to allow seamless upgrades; use csv as owner for ui/cm objects
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/deploy/catalog_resources/community/1.2.0/kiecloud-operator.1.2.0.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/1.2.0/kiecloud-operator.1.2.0.clusterserviceversion.yaml
@@ -31,6 +31,7 @@ spec:
     - automation
     - operator
   version: 1.2.0
+  replaces: kiecloud-operator.1.1.1
   maturity: stable
   maintainers:
     - name: Red Hat, Inc.
@@ -176,7 +177,10 @@ spec:
           spec:
             replicas: 1
             strategy:
-              type: Recreate
+              type: RollingUpdate
+              rollingUpdate:
+                maxSurge: 1
+                maxUnavailable: 1
             selector:
               matchLabels:
                 name: kie-cloud-operator
