Reserve CSV upgrades for 1.2.1 / 7.5.1 release
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/deploy/catalog_resources/community/1.1.1/kiecloud-operator.1.1.1.clusterserviceversion.yaml
+++ b/deploy/catalog_resources/community/1.1.1/kiecloud-operator.1.1.1.clusterserviceversion.yaml
@@ -159,10 +159,7 @@ spec:
           spec:
             replicas: 1
             strategy:
-              type: RollingUpdate
-              rollingUpdate:
-                maxSurge: 1
-                maxUnavailable: 1
+              type: Recreate
             selector:
               matchLabels:
                 name: kie-cloud-operator
