--- a/config/7.5.1/common.yaml
+++ b/config/7.5.1/common.yaml
@@ -54,10 +54,10 @@ console:
                     path: /rest/ready
                     port: 8080
                     scheme: HTTP
-                  initialDelaySeconds: 60
+                  initialDelaySeconds: 30
                   timeoutSeconds: 2
-                  periodSeconds: 30
-                  failureThreshold: 6
+                  periodSeconds: 5
+                  failureThreshold: 36
                 ports:
                   - name: jolokia
                     containerPort: 8778
@@ -72,6 +72,10 @@ console:
                     containerPort: 8888
                     protocol: TCP
                 env:
+                  - name: APPLICATION_USERS_PROPERTIES
+                    value: "/opt/kie/data/configuration/application-users.properties"
+                  - name: APPLICATION_ROLES_PROPERTIES
+                    value: "/opt/kie/data/configuration/application-roles.properties"
                   - name: KIE_ADMIN_USER
                     value: "[[.AdminUser]]"
                   - name: KIE_ADMIN_PWD
@@ -662,10 +666,10 @@ servers:
                       path: /services/rest/server/readycheck
                       port: 8080
                       scheme: HTTP
-                    initialDelaySeconds: 60
+                    initialDelaySeconds: 30
                     timeoutSeconds: 2
-                    periodSeconds: 30
-                    failureThreshold: 6
+                    periodSeconds: 5
+                    failureThreshold: 36
                   ports:
                     - name: jolokia
                       containerPort: 8778
