--- a/config/7.5.1/envs/rhpam-trial.yaml
+++ b/config/7.5.1/envs/rhpam-trial.yaml
@@ -7,10 +7,11 @@ console:
           spec:
             containers:
               - name: "[[.ApplicationName]]-[[.Console.Name]]"
-                ports:
-                  - name: git-ssh
-                    containerPort: 8001
-                    protocol: TCP
+                env:
+                  - name: KIE_SERVER_HOST
+                  - name: JGROUPS_PING_PROTOCOL
+                  - name: OPENSHIFT_DNS_PING_SERVICE_NAME
+                  - name: OPENSHIFT_DNS_PING_SERVICE_PORT
             volumes:
               - name: "[[.ApplicationName]]-[[.Console.Name]]-pvol"
                 emptyDir: {}
@@ -20,13 +21,6 @@ console:
         annotations:
           delete: "true"
   services:
-    - metadata:
-        name: "[[.ApplicationName]]-[[.Console.Name]]"
-      spec:
-        ports:
-          - name: git-ssh
-            port: 8001
-            targetPort: 8001
     - metadata:
         name: "[[.ApplicationName]]-[[.Console.Name]]-ping"
         annotations:
