--- a/config/7.5.1/jms/activemq-jms-config.yaml
+++ b/config/7.5.1/jms/activemq-jms-config.yaml
@@ -13,36 +13,40 @@ servers:
               - name: "[[.KieName]]"
                 env:
                   # JMS config BEGIN
+                  - name: KIE_SERVER_EXECUTOR_JMS
+                    value: "[[.Jms.Executor]]"
+                  - name: KIE_SERVER_EXECUTOR_JMS_TRANSACTED
+                    value: "[[.Jms.ExecutorTransacted]]"
                   - name: KIE_SERVER_JMS_QUEUE_REQUEST
-                    value: "[[.Jms.KieServerJmsQueueRequest]]"
+                    value: "[[.Jms.QueueRequest]]"
                   - name: KIE_SERVER_JMS_QUEUE_RESPONSE
-                    value: "[[.Jms.KieServerJmsQueueResponse]]"
+                    value: "[[.Jms.QueueResponse]]"
                   - name: KIE_SERVER_JMS_QUEUE_EXECUTOR
-                    value: "[[.Jms.KieServerJmsQueueExecutor]]"
+                    value: "[[.Jms.QueueExecutor]]"
                   - name: KIE_SERVER_JMS_ENABLE_SIGNAL
-                    value: "[[.Jms.KieServerJmsEnableSignal]]"
-                    # [[ if .Jms.KieServerJmsEnableSignal]]
+                    value: "[[.Jms.EnableSignal]]"
+                    # [[ if .Jms.EnableSignal]]
                   - name: KIE_SERVER_JMS_QUEUE_SIGNAL
-                    value: "[[.Jms.KieServerJmsQueueSignal]]"
+                    value: "[[.Jms.QueueSignal]]"
                     # [[end]]
                   - name: KIE_SERVER_JMS_ENABLE_AUDIT
-                    value: "[[.Jms.KieServerJmsEnableAudit]]"
-                    # [[ if .Jms.KieServerJmsEnableAudit]]
+                    value: "[[.Jms.EnableAudit]]"
+                    # [[ if .Jms.EnableAudit]]
                   - name: KIE_SERVER_JMS_QUEUE_AUDIT
-                    value: "[[.Jms.KieServerJmsQueueAudit]]"
+                    value: "[[.Jms.QueueAudit]]"
                     # [[end]]
                   - name: KIE_SERVER_JMS_AUDIT_TRANSACTED
-                    value: "[[.Jms.KieServerJmsAuditTransacted]]"
+                    value: "[[.Jms.AuditTransacted]]"
                   - name: MQ_SERVICE_PREFIX_MAPPING
                     value: "[[.KieName]]-amq7=AMQ"
                   - name: AMQ_USERNAME
-                    value: "[[.Jms.KieServerJmsUsername]]"
+                    value: "[[.Jms.Username]]"
                   - name: AMQ_PASSWORD
-                    value: "[[.Jms.KieServerJmsPassword]]"
+                    value: "[[.Jms.Password]]"
                   - name: AMQ_PROTOCOL
                     value: "tcp"
                   - name: AMQ_QUEUES
-                    value: "[[.Jms.KieServerJmsAMQQueues]]"
+                    value: "[[.Jms.AMQQueues]]"
                   # JMS config END
     ## KIE server deployment config END
     ## AMQ deployment BEGIN
@@ -51,7 +55,7 @@ servers:
         labels:
           app: "[[$.ApplicationName]]"
           application: "[[$.ApplicationName]]"
-          service: "[[.KieName]]"
+          service: "[[.KieName]]-amq"
         annotations:
           template.alpha.openshift.io/wait-for-ready: "true"
       spec:
@@ -96,22 +100,34 @@ servers:
                   name: console-jolokia
                   protocol: TCP
                 - containerPort: 5672
-                  name: amq-amqp
+                  name: amqp
+                  protocol: TCP
+                - containerPort: 5671
+                  name: amqp-ssl
                   protocol: TCP
                 - containerPort: 1883
-                  name: amq-mqtt
+                  name: mqtt
+                  protocol: TCP
+                - containerPort: 8883
+                  name: mqtt-ssl
                   protocol: TCP
                 - containerPort: 61613
-                  name: amq-stomp
+                  name: stomp
+                  protocol: TCP
+                - containerPort: 61612
+                  name: stomp-ssl
                   protocol: TCP
                 - containerPort: 61616
-                  name: amq-tcp
+                  name: artemis
+                  protocol: TCP
+                - containerPort: 61617
+                  name: amq-tcp-ssl
                   protocol: TCP
               env:
                 - name: AMQ_USER
-                  value: "[[.Jms.KieServerJmsUsername]]"
+                  value: "[[.Jms.Username]]"
                 - name: AMQ_PASSWORD
-                  value: "[[.Jms.KieServerJmsPassword]]"
+                  value: "[[.Jms.Password]]"
                   # maybe turn it in a parameter and defaults to admin if empty?
                 - name: AMQ_ROLE
                   value: "admin"
@@ -120,11 +136,32 @@ servers:
                 - name: AMQ_TRANSPORTS
                   value: "openwire"
                 - name: AMQ_QUEUES
-                  value: "[[.Jms.KieServerJmsAMQQueues]]"
+                  value: "[[.Jms.AMQQueues]]"
                 - name: AMQ_REQUIRE_LOGIN
-                  value: "false"
+                  value: "true"
                 - name: AMQ_ANYCAST_PREFIX
                 - name: AMQ_MULTICAST_PREFIX
+            # [[ if .Jms.AMQEnableSSL]]
+                - name: AMQ_KEYSTORE_TRUSTSTORE_DIR
+                  value: "/etc/amq-secret-volume"
+                - name: AMQ_TRUSTSTORE
+                  value: '[[.Jms.AMQTruststoreName ]]'
+                - name: AMQ_TRUSTSTORE_PASSWORD
+                  value: '[[.Jms.AMQTruststorePassword ]]'
+                - name: AMQ_KEYSTORE
+                  value: '[[.Jms.AMQKeystoreName ]]'
+                - name: AMQ_KEYSTORE_PASSWORD
+                  value: '[[.Jms.AMQKeystorePassword ]]'
+              volumeMounts:
+                - name: broker-secret-volume
+                  mountPath: "/etc/amq-secret-volume"
+                  readOnly: true
+            volumes:
+              - name: broker-secret-volume
+                secret:
+                  secretName: '[[.Jms.AMQSecretName ]]'
+           # [[end]]
+
     ## AMQ deployment END
     services:
       - spec:
@@ -144,7 +181,7 @@ servers:
             description: "The broker's console and Jolokia port."
       - spec:
           ports:
-            - name: "amp-amqp"
+            - name: "amq-amqp"
               port: 5672
               targetPort: 5672
           selector:
@@ -157,6 +194,21 @@ servers:
             service: "[[.KieName]]-amq"
           annotations:
             description: "The broker's AMQP port."
+      - spec:
+          ports:
+            - name: "amq-amqp-ssl"
+              port: 5671
+              targetPort: 5671
+          selector:
+            deploymentConfig: "[[.KieName]]-amq"
+        metadata:
+          name: "[[.KieName]]-amq-amqp-ssl"
+          labels:
+            app: "[[$.ApplicationName]]"
+            application: "[[$.ApplicationName]]"
+            service: "[[.KieName]]-amq"
+          annotations:
+            description: "The broker's AMQP SSL port."
       - spec:
           ports:
             - name: "amq-mqtt"
@@ -174,7 +226,22 @@ servers:
             description: "The broker's MQTT port."
       - spec:
           ports:
-            - name: "amp-stomp"
+            - name: "amq-mqtt-ssl"
+              port: 8883
+              targetPort: 8883
+          selector:
+            deploymentConfig: "[[.KieName]]-amq"
+        metadata:
+          name: "[[.KieName]]-amq-mqtt-ssl"
+          labels:
+            app: "[[$.ApplicationName]]"
+            application: "[[$.ApplicationName]]"
+            service: "[[.KieName]]-amq"
+          annotations:
+            description: "The broker's MQTT SSL port."
+      - spec:
+          ports:
+            - name: "amq-stomp"
               port: 61613
               targetPort: 61613
           selector:
@@ -187,6 +254,21 @@ servers:
             service: "[[.KieName]]-amq"
           annotations:
             description: "The broker's STOMP port."
+      - spec:
+          ports:
+            - name: "amq-stomp-ssl"
+              port: 61612
+              targetPort: 61612
+          selector:
+            deploymentConfig: "[[.KieName]]-amq"
+        metadata:
+          name: "[[.KieName]]-amq-stomp-ssl"
+          labels:
+            app: "[[$.ApplicationName]]"
+            application: "[[$.ApplicationName]]"
+            service: "[[.KieName]]-amq"
+          annotations:
+            description: "The broker's STOMP SSL port."
       - spec:
           ports:
             - name: "amq-tcp"
@@ -205,11 +287,33 @@ servers:
             service.alpha.openshift.io/dependencies: '[{"name": "[[.KieName]]-amq-amqp",
                 "kind": "Service"},{"name": "[[.KieName]]-amq-mqtt", "kind": "Service"},{"name":
                 "[[.KieName]]-amq-stomp", "kind": "Service"}]'
-
+      - spec:
+          ports:
+            - name: "amq-tcp-ssl"
+              port: 61617
+              targetPort: 61617
+          selector:
+            deploymentConfig: "[[.KieName]]-amq"
+        metadata:
+          name: "[[.KieName]]-amq-tcp-ssl"
+          labels:
+            app: "[[$.ApplicationName]]"
+            application: "[[$.ApplicationName]]"
+            service: "[[.KieName]]-amq"
+          annotations:
+            description: The broker's OpenWire SSL port.
+            service.alpha.openshift.io/dependencies: '[{"name": "[[.KieName]]-amq-tcp", "kind": "Service"},{"name":
+                "[[.KieName]]-amq-amqp", "kind": "Service"},{"name":
+                "[[.KieName]]-amq-mqtt", "kind": "Service"},{"name":
+                "[[.KieName]]-amq-stomp", "kind": "Service"},{"name":
+                "[[.KieName]]-amq-amqp-ssl", "kind": "Service"},{"name":
+                "[[.KieName]]-amq-mqtt-ssl", "kind": "Service"},{"name":
+                "[[.KieName]]-amq-stomp-ssl", "kind": "Service"}]'
     routes:
+      # [[ if .Jms.AMQEnableSSL]]
       - id: "[[.KieName]]-amq-jolokia-console"
         metadata:
-          name: amq-jolokia-console
+          name: "amq-jolokia-console"
           labels:
             app: "[[$.ApplicationName]]"
             application: "[[$.ApplicationName]]"
@@ -220,6 +324,40 @@ servers:
           to:
             kind: "Service"
             name: "[[.KieName]]-amq-jolokia"
+          tls:
+            termination: passthrough
+
+      - id: "[[.KieName]]-amq-tcp-ssl"
+        metadata:
+          name: "amq-tcp-ssl"
+          labels:
+            app: "[[$.ApplicationName]]"
+            application: "[[$.ApplicationName]]"
+            service: "[[.KieName]]-amq"
+          annotations:
+            description: "Route for AMQ Jolokia Service"
+        spec:
+          to:
+            kind: "Service"
+            name: "[[.KieName]]-amq-tcp-ssl"
+          tls:
+            termination: passthrough
+      # [[else]]
+      - id: "[[.KieName]]-amq-jolokia-console"
+        metadata:
+          name: "amq-jolokia-console"
+          labels:
+            app: "[[$.ApplicationName]]"
+            application: "[[$.ApplicationName]]"
+            service: "[[.KieName]]-amq"
+          annotations:
+            description: "Route for AMQ Jolokia Service"
+        spec:
+          to:
+            kind: "Service"
+            name: "[[.KieName]]-amq-jolokia"
+      # [[end]]
+
 #[[end]]
 ## RANGE ends
 ## KIE Servers END
