--- a/config/7.5.0/envs/rhpam-authoring-ha.yaml
+++ b/config/7.5.0/envs/rhpam-authoring-ha.yaml
@@ -277,10 +277,11 @@ others:
                     timeoutSeconds: 10
                   resources:
                     limits:
-                      memory: "512Mi"
+                      cpu: "1000m"
+                      memory: "2Gi"
                     requests:
-                      cpu: "0.5"
-                      memory: "512Mi"
+                      cpu: "1000m"
+                      memory: "2Gi"
                   volumeMounts:
                     - mountPath: /opt/datagrid/standalone/data
                       name: srv-data
