[RHDM-1057_RHPAM-2279] - Review and update Authoring HA template for latest changes
Signed-off-by: Filippe Spolti <fspolti@redhat.com>

--- a/config/7.5.0/envs/rhpam-authoring-ha.yaml
+++ b/config/7.5.0/envs/rhpam-authoring-ha.yaml
@@ -46,165 +46,6 @@ console:
 # ES/AMQ BEGIN
 others:
   - roles:
-      - metadata:
-          name: "[[.ApplicationName]]-amq-role"
-          labels:
-            app: "[[.ApplicationName]]"
-            application: "[[.ApplicationName]]"
-        rules:
-          - apiGroups:
-              - ""
-            resources:
-              - endpoints
-            verbs:
-              - create
-              - delete
-              - deletecollection
-              - get
-              - list
-              - patch
-              - update
-              - watch
-          - apiGroups:
-              - ""
-            resources:
-              - namespaces
-            verbs:
-              - get
-              - list
-
-      - metadata:
-          name: "[[.ApplicationName]]-amq-scaledown-controller-role"
-          labels:
-            app: "[[.ApplicationName]]"
-            application: "[[.ApplicationName]]"
-        rules:
-          - apiGroups:
-              - apps
-            resources:
-              - statefulsets
-            verbs:
-              - get
-              - list
-              - watch
-          - apiGroups:
-              - ""
-            resources:
-              - pods
-            verbs:
-              - get
-              - list
-              - watch
-              - create
-              - delete
-              - patch
-              - update
-          - apiGroups:
-              - ""
-            resources:
-              - persistentvolumeclaims
-            verbs:
-              - get
-              - list
-              - watch
-              - delete
-          - apiGroups:
-              - ""
-            resources:
-              - events
-            verbs:
-              - get
-              - list
-              - watch
-
-    rolebindings:
-      - metadata:
-          name: "[[.ApplicationName]]-amq-scaledown-controller-openshift-rb"
-          labels:
-            app: "[[.ApplicationName]]"
-            application: "[[.ApplicationName]]"
-        subjects:
-          - kind: ServiceAccount
-            name: "[[.ApplicationName]]-amq-scaledown-controller-sa"
-        roleRef:
-          kind: Role
-          name: "[[.ApplicationName]]-amq-scaledown-controller-role"
-          apiGroup: rbac.authorization.k8s.io
-
-      - metadata:
-          name: "[[.ApplicationName]]-amq-rb"
-          labels:
-            app: "[[.ApplicationName]]"
-            application: "[[.ApplicationName]]"
-        subjects:
-          - kind: ServiceAccount
-            name: "[[.ApplicationName]]-amq-sa"
-        roleRef:
-          kind: Role
-          name: "[[.ApplicationName]]-amq-role"
-          apiGroup: rbac.authorization.k8s.io
-
-    serviceaccounts:
-      - metadata:
-          labels:
-            app: "[[.ApplicationName]]"
-            application: "[[.ApplicationName]]"
-          name: "[[.ApplicationName]]-amq-sa"
-
-      - metadata:
-          labels:
-            app: "[[.ApplicationName]]"
-            application: "[[.ApplicationName]]"
-          name: "[[.ApplicationName]]-amq-scaledown-controller-sa"
-
-    deploymentConfigs:
-      - metadata:
-          labels:
-            app: "[[.ApplicationName]]"
-            application: "[[.ApplicationName]]"
-            service: "[[.ApplicationName]]-amq-scaledown-controller"
-          name: "[[.ApplicationName]]-amq-scaledown-controller"
-          annotations:
-            deployment.kubernetes.io/revision: "1"
-            template.alpha.openshift.io/wait-for-ready: "true"
-        spec:
-          replicas: 1
-          selector:
-            deploymentConfig: "[[.ApplicationName]]-amq-scaledown-controller"
-          strategy:
-            rollingParams:
-              maxSurge: 0
-            type: Rolling
-          template:
-            metadata:
-              labels:
-                app: "[[.ApplicationName]]"
-                application: "[[.ApplicationName]]"
-                deploymentConfig: "[[.ApplicationName]]-amq-scaledown-controller"
-              name: "[[.ApplicationName]]-amq-scaledown-controller"
-            spec:
-              serviceAccountName: "[[.ApplicationName]]-amq-scaledown-controller-sa"
-              containers:
-                - args:
-                    - --localOnly
-                    - --v
-                    - "3"
-                  image: "amq-broker-72-scaledown-openshift"
-                  imagePullPolicy: IfNotPresent
-                  name: "[[.ApplicationName]]-amq"
-              terminationGracePeriodSeconds: 30
-          triggers:
-            - imageChangeParams:
-                automatic: true
-                containerNames:
-                  - "[[.ApplicationName]]-amq"
-                from:
-                  kind: ImageStreamTag
-                  namespace: "openshift"
-                  name: "amq-broker-72-scaledown-openshift:0.4"
-              type: ImageChange
-            - type: ConfigChange
-
     statefulsets:
       - metadata:
           name: "[[.ApplicationName]]-datagrid"
@@ -313,110 +154,6 @@ others:
       - metadata:
           annotations:
             alpha.image.policy.openshift.io/resolve-names: "*"
-            statefulsets.kubernetes.io/drainer-pod-template: |
-              {
-                "metadata": {
-                  "labels": {
-                    "app": "[[.ApplicationName]]",
-                    "application": "[[.ApplicationName]]"
-                  },
-                  "name": "[[.ApplicationName]]-amq-drainer-pod"
-                },
-                "spec": {
-                  "serviceAccount": "[[.ApplicationName]]-amq-sa",
-                  "serviceAccountName": "[[.ApplicationName]]-amq-sa",
-                  "terminationGracePeriodSeconds": 5,
-                  "containers": [
-                    {
-                      "env": [
-                        {
-                          "name": "AMQ_EXTRA_ARGS",
-                          "value": "--no-autotune"
-                        },
-                        {
-                          "name": "AMQ_USER",
-                          "value": "jmsBrokerUser"
-                        },
-                        {
-                          "name": "AMQ_PASSWORD",
-                          "value": "[[.AMQPassword]]"
-                        },
-                        {
-                          "name": "AMQ_ROLE",
-                          "value": "admin"
-                        },
-                        {
-                          "name": "AMQ_NAME",
-                          "value": "broker"
-                        },
-                        {
-                          "name": "AMQ_TRANSPORTS",
-                          "value": "openwire"
-                        },
-                        {
-                          "name": "AMQ_QUEUES",
-                          "value": ""
-                        },
-                        {
-                          "name": "AMQ_GLOBAL_MAX_SIZE",
-                          "value": "100 gb"
-                        },
-                        {
-                          "name": "AMQ_ALLOW_ANONYMOUS",
-                          "value": ""
-                        },
-                        {
-                          "name": "AMQ_DATA_DIR",
-                          "value": "/opt/amq/data"
-                        },
-                        {
-                          "name": "AMQ_DATA_DIR_LOGGING",
-                          "value": "true"
-                        },
-                        {
-                          "name": "AMQ_CLUSTERED",
-                          "value": "true"
-                        },
-                        {
-                          "name": "AMQ_REPLICAS",
-                          "value": "2"
-                        },
-                        {
-                          "name": "AMQ_CLUSTER_USER",
-                          "value": "jmsBrokerUser"
-                        },
-                        {
-                          "name": "AMQ_CLUSTER_PASSWORD",
-                          "value": "[[.AMQClusterPassword]]"
-                        },
-                        {
-                          "name": "POD_NAMESPACE",
-                          "valueFrom": {
-                            "fieldRef": {
-                              "fieldPath": "metadata.namespace"
-                            }
-                          }
-                        },
-                        {
-                          "name": "OPENSHIFT_DNS_PING_SERVICE_PORT",
-                          "value": "8888"
-                        }
-                      ],
-                      "image": "registry.redhat.io/amq-broker-7/[[$.Constants.BrokerImage]]:[[$.Constants.BrokerImageTag]]",
-                      "name": "[[.ApplicationName]]-amq",
-                      "command": ["/bin/sh", "-c", "echo \"Starting the drainer\" ; /opt/amq/bin/drain.sh; echo \"Drain completed! Exit code $?\""],
-                      "volumeMounts": [
-                        {
-                          "name": "[[.ApplicationName]]-amq-pvol",
-                          "mountPath": "/opt/amq/data"
-                        }
-                      ]
-                    }
-                  ]
-                }
-              }
-          creationTimestamp: null
-          generation: 3
           labels:
             app: "[[.ApplicationName]]"
             application: "[[.ApplicationName]]"
@@ -475,7 +212,7 @@ others:
                         fieldRef:
                           apiVersion: v1
                           fieldPath: metadata.namespace
-                  image: "registry.redhat.io/amq-broker-7/[[$.Constants.BrokerImage]]:[[$.Constants.BrokerImageTag]]"
+                  image: "registry.redhat.io/amq7/[[$.Constants.BrokerImage]]:[[$.Constants.BrokerImageTag]]"
                   imagePullPolicy: IfNotPresent
                   name: broker-amq
                   ports:
