--- a/config/7.5.0/envs/rhpam-authoring-ha.yaml
+++ b/config/7.5.0/envs/rhpam-authoring-ha.yaml
@@ -45,8 +45,7 @@ console:
 
 # ES/AMQ BEGIN
 others:
-  - roles:
-    statefulsets:
+  - statefulsets:
       - metadata:
           name: "[[.ApplicationName]]-datagrid"
           labels:
