rename crd files & fix package link
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/deploy/catalog_resources/community/1.2.1/kiecloud.1.2.1.package.yaml
+++ b/deploy/catalog_resources/community/1.2.1/kiecloud.1.2.1.package.yaml
@@ -1,1 +1,5 @@
-../../../community/1.2.1/kiecloud-operator.1.2.1.clusterserviceversion.yaml
+#! package-manifest: deploy/catalog_resources/community/1.2.1/kiecloud-operator.1.2.1.clusterserviceversion.yaml
+packageName: kiecloud-operator
+channels:
+  - name: stable
+    currentCSV: kiecloud-operator.1.2.1
