--- a/deploy/catalog_resources/redhat/1.2.1/businessautomation.1.2.1.package.yaml
+++ b/deploy/catalog_resources/redhat/1.2.1/businessautomation.1.2.1.package.yaml
@@ -1,5 +1,5 @@
 #! package-manifest: deploy/catalog_resources/redhat/1.2.1/businessautomation-operator.1.2.1.clusterserviceversion.yaml
-packageName: businessautomation-operator
 channels:
-  - name: stable
-    currentCSV: businessautomation-operator.1.2.1
+- currentCSV: businessautomation-operator.1.2.1
+  name: stable
+packageName: businessautomation-operator
