[KIECLOUD-328] required changes to build meta information for CPaaS
Signed-off-by: David Ward <dward@redhat.com>

--- a/image.yaml
+++ b/image.yaml
@@ -37,7 +37,7 @@ osbs:
           - x86_64
   repository:
     name: containers/rhpam-7-operator-openshift
-    branch: rhpam-7.5-openshift-rhel8
+    branch: rhba-7.5-openshift-rhel-8
 run:
   entrypoint:
     - "/usr/local/bin/entrypoint"
