--- a/image.yaml
+++ b/image.yaml
@@ -1,14 +1,14 @@
 schema_version: 1
 
-name: "rhpam-7/rhpam75-operator"
+name: "rhpam-7/rhpam"
 description: "Red Hat Business Automation Operator"
-version: "1.1"
+version: "7.5.1"
 from: "ubi8:8-released"
 labels:
   - name: "maintainer"
     value: "bsig-cloud@redhat.com"
   - name: "com.redhat.component"
-    value: "rhpam-7-rhpam75-operator-container"
+    value: "rhpam-7-rhel8-operator-container"
   - name: "io.k8s.description"
     value: "Operator for deploying RHPAM & RHDM"
   - name: "io.k8s.display-name"
@@ -36,8 +36,8 @@ osbs:
         only:
           - x86_64
   repository:
-    name: containers/rhpam-7-operator-openshift
-    branch: rhba-7.5-openshift-rhel-8
+    name: containers/rhpam-7-operator
+    branch: rhba-7-rhel-8
 run:
   entrypoint:
     - "/usr/local/bin/entrypoint"
