[RHPAM-2401] - Change strategy to type Rolling for other BA components
Signed-off-by: Filippe Spolti <fspolti@redhat.com>

--- a/config/7.6.0/common.yaml
+++ b/config/7.6.0/common.yaml
@@ -304,7 +304,10 @@ smartRouter:
           service: "[[.ApplicationName]]-smartrouter"
       spec:
         strategy:
-          type: Recreate
+          rollingParams:
+            maxSurge: 100%
+            maxUnavailable: 0
+          type: Rolling
         triggers:
           - type: ImageChange
             imageChangeParams:
