--- a/config/7.6.0/envs/rhdm-authoring-ha.yaml
+++ b/config/7.6.0/envs/rhdm-authoring-ha.yaml
@@ -54,19 +54,15 @@ others:
             service: "[[.ApplicationName]]-datagrid"
         spec:
           podManagementPolicy: OrderedReady
-          replicas: 1
+          updateStrategy:
+            rollingUpdate:
+              partition: 0
+            type: RollingUpdate
+          replicas: 2
           selector:
             matchLabels:
               deploymentConfig: "[[.ApplicationName]]-datagrid"
           serviceName: "[[.ApplicationName]]-datagrid"
-          strategy:
-            rollingParams:
-              intervalSeconds: 20
-              maxSurge: 1
-              maxUnavailable: 1
-              timeoutSeconds: 1200
-              updatePeriodSeconds: 20
-            type: Rolling
           template:
             metadata:
               labels:
@@ -160,7 +156,11 @@ others:
             application: "[[.ApplicationName]]"
           name: "[[.ApplicationName]]-amq"
         spec:
-          podManagementPolicy: OrderedReady
+          podManagementPolicy:
+          updateStrategy:
+            rollingUpdate:
+              partition: 0
+            type: RollingUpdate
           replicas: 2
           revisionHistoryLimit: 10
           selector:
@@ -252,8 +252,6 @@ others:
               schedulerName: default-scheduler
               securityContext: {}
               terminationGracePeriodSeconds: 60
-          updateStrategy:
-            type: OnDelete
           volumeClaimTemplates:
             - metadata:
                 name: "[[.ApplicationName]]-amq-pvol"
